# python-django-orm-blog

./: Makefile  README.md  manage.py  pyproject.toml  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: pyci.yml
hexlet_django_orm_blog/: settings.py  urls.py
hexlet_django_orm_blog/blog/: models.py  tests.py
hexlet_django_orm_blog/blog/migrations/: 0001_initial.py
python_django_orm_blog/: settings.py
python_django_orm_blog/blog/: models.py  tests.py
python_django_orm_blog/blog/migrations/: 0001_initial.py
