[tool.poetry]
name = "python_django_orm_blog"
version = "0.1.0"
description = "A simple Django project that implements a simple blog."
authors = ["Hexlet Team <info@hexlet.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-django = "^4.5.2"
django-extensions = "^3.2.1"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
